frontend/virtual/Include/libadalang/libadalang-implementation-c.ads


   function ada_component_list_f_variant_part
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_component_list_f_variant_part";

   function ada_known_discriminant_part_f_discr_specs
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_known_discriminant_part_f_discr_specs";

   function ada_entry_completion_formal_params_f_params
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_entry_completion_formal_params_f_params";

   function ada_generic_formal_part_f_decls
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_generic_formal_part_f_decls";
      --  This field contains a list that itself contains one of the following
      --  nodes:
      --
      --  * Generic_Formal
      --
      --  * Pragma_Node
      --
      --  * Use_Clause

   function ada_base_record_def_f_components
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_record_def_f_components";

   function ada_basic_assoc_p_get_params
     (Node : ada_base_entity_Ptr;
Imprecise_Fallback :
ada_bool;

      Value_P : access ada_ada_node_array) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_assoc_p_get_params";
      --  Return the list of parameters that this association refers to.

   function ada_aggregate_assoc_f_designators
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_aggregate_assoc_f_designators";
      --  This field contains a list that itself contains one of the following
      --  nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Discrete_Subtype_Indication
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Others_Designator
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_aggregate_assoc_f_r_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_aggregate_assoc_f_r_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Box_Expr
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_discriminant_assoc_f_ids
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_discriminant_assoc_f_ids";

   function ada_discriminant_assoc_f_discr_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_discriminant_assoc_f_discr_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_param_assoc_f_designator
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_param_assoc_f_designator";
      --  This field can contain one of the following nodes:
      --
      --  * Identifier
      --
      --  * Others_Designator
      --
      --  * String_Literal

   function ada_param_assoc_f_r_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_param_assoc_f_r_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Box_Expr
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_basic_decl_p_is_formal
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_is_formal";
      --  Whether this decl is the nested decl of a generic formal declaration.

   function ada_basic_decl_p_doc_annotations
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_doc_annotation_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_doc_annotations";
      --  Return the documentation annotations associated with this decl.
      --  Annotations are any comment line of the form::
      --
      --  --% [annotation_name]: [annotation]
      --
      --  Raises a property error if the doc is incorrectly formatted.
      --
      --  .. ATTENTION:: This is an experimental feature, so even if it is
      --  exposed
      --     to allow experiments, it is totally unsupported and the API and
      --     behavior are very likely to change in the future.

   function ada_basic_decl_p_doc
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_text_type)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_doc";
      --  Return the documentation associated with this decl. Raises a property
      --  error if the doc is incorrectly formatted.
      --
      --  .. ATTENTION:: This is an experimental feature, so even if it is
      --  exposed
      --     to allow experiments, it is totally unsupported and the API and
      --     behavior are very likely to change in the future.

   function ada_basic_decl_p_previous_part_for_decl
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_previous_part_for_decl";
      --  Return the previous part for this decl, if applicable.
      --
      --  .. note:: It is not named previous_part, because BaseTypeDecl has a
      --  more
      --     precise version of previous_part that returns a BaseTypeDecl.
   --     Probably, we want to rename the specific versions, and have the root
      --     property be named previous_part. (TODO R925-008)

   function ada_basic_decl_p_canonical_part
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_canonical_part";
      --  Return the canonical part for this decl. In the case of decls
      --  composed of several parts, the canonical part will be the first part.

   function ada_basic_decl_p_is_static_decl
     (Node : ada_base_entity_Ptr;
Imprecise_Fallback :
ada_bool;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_is_static_decl";
      --  Return whether this declaration is static.

   function ada_basic_decl_p_is_imported
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_is_imported";
      --  Whether this declaration is imported from another language.

   function ada_basic_decl_f_aspects
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_f_aspects";
      --  Return the list of aspects that are attached to this node.

   function ada_basic_decl_p_get_aspect_assoc
     (Node : ada_base_entity_Ptr;
Name       : access constant ada_symbol_type;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_get_aspect_assoc";
      --  Return the aspect with name ``name`` for this entity.

   function ada_basic_decl_p_get_aspect_spec_expr
     (Node : ada_base_entity_Ptr;
Name       : access constant ada_symbol_type;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_get_aspect_spec_expr";
      --  Return the expression associated to the aspect with name ``name`` for
      --  this entity.

   function ada_basic_decl_p_get_aspect
     (Node : ada_base_entity_Ptr;
Name       : access constant ada_symbol_type;
      Imprecise_Fallback :
ada_bool;
Value_P : access ada_internal_aspect)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_get_aspect";
      --  Return the aspect with name ``name`` associated to this entity.
      --
      --  Aspects are properties of entities that can be specified by the Ada
      --  program, either via aspect specifications, pragmas, or attributes.
      --
      --  This will return the syntactic node corresponding to attribute
      --  directly.
